2002-08-28  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (FindMethodMember): One more case of bug 3240.
	(ProcessClassInstanceCreationExpression):
	* src/body.cpp (UncaughtExceptionContext): Fix error messages.
	* src/init.cpp (ComputeFinalValue): Provide correct context for
	evaluating final variables - bug 3245.	

2002-08-26  Eric Blake  <ebb9@email.byu.edu>

	* src/symbol.cpp (GetWriteAccessMethod, GetReadAccessMethod):
	Special case access of field via classname.super.
	* src/expr.cpp (FindMethodMember, FindVariableMember): Check for
	accessor methods required for classname.super when inner class and
	enclosing class extend same superclass - bug 3240.

2002-08-26  ??  <nobody@ibm.com>

	* src/option.cpp (Option): Fix bad logic with drive letters in -d
	for Windows - bug 3238.

2002-08-26  Eric Blake  <ebb9@email.byu.edu>

	* src/symbol.cpp (BlockSymbol):
	* src/body.cpp (ProcessTryStatement),
	(ProcessSynchronizedStatement): Fix bug when multiple synchronized
	statements appear in static method with no params - bug 3205.
	* src/decl.cpp: Fix typo in last commit.

2002-08-26  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (ProcessTypeHeader, ProcessInterface),
	(ProcessTypeHeaders): Fix inner classes subclassing something in
	the same .java file - bug 3202.
	* src/scanner.cpp (ScanSlashComment): Comment dead code.
	* src/stream.h (LAST_CHARACTER_NOT_NEWLINE): New warning.
	* src/stream.cpp (ProcessInputAscii, ProcessInputUnicode): Give
	pedantic warning if file doesn't end in \n (or its variants).

2002-08-22  Eric Blake  <ebb9@email.byu.edu>

	* src/scanner.cpp (ScanSlashComment): Revert change that gave
	error on //EOF, based on Sun bug 4386773.

2002-08-21  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (StripNops): Minor bytecode optimization -
	assignment conversion to superinterfaces was emitting useless
	checkcast.

2002-08-15  Eric Blake  <ebb9@email.byu.edu>

	* src/error.cpp: