@@ -15,6 +15,7 @@ Bu FeiMing
 Max Gilead
 Adam Hawthorne
 Diane Holt
+Elliott Hughes
 Andrew M. Inggs
 C. Brian Jones
 Marko Kreen
